# police-alert

./: .gitignore  BUILD.md  CLAUDE.md  build.bat  build.sh
.ace-tool/: index.json
.claude/: 数据表设计-基于现有代码.md  数据表设计v2.md  需求文档.md
.claude/plan/: UI缩放策略实施计划.md  全局UI元素放大方案C实施计划.md  移除后端配置服务.md  警情态势页面实施计划.md  风险盯办与纠纷管理实施计划.md
.claude/ui-prompts/: 版本2-简约商务扁平化设计.md
.github/workflows/: build-release.yml
backend/: .env.example  .gitignore  CLAUDE.md  data.db  generate_sample_excel.py  generate_test_data.py  main.py  pyproject.toml  执法问题风险盯办_测试数据.xlsx  报警记录导入模板_示例数据.xlsx  沈西所.xls  矛盾纠纷闭环管理_测试数据.xlsx  示例数据_测试导入.xlsx  警情记录导入模板_示例数据.xlsx
backend/app/api/: admin.py  data.py
backend/app/core/: config.py  database.py  init_db.py
backend/app/models/: __init__.py  call_record.py  display_rule.py  dispute_management.py  geocoding_cache.py  police_alert.py  risk_supervision.py
backend/app/schemas/: __init__.py  call_record.py  display_rule.py  dispute_management.py  geocoding_cache.py  police_alert.py  risk_supervision.py
backend/app/services/: call_record.py  display_rule.py  dispute_management.py  geocoding.py  police_alert.py  risk_supervision.py  situation.py
backend/app/utils/: alert_category.py  constants.py  time_range.py  timezone.py
backend/temp/: 执法问题风险盯办_模板.xlsx
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
frontend/public/: 数据导入模板 (1).xlsx  数据导入模板.xlsx  警情态势追踪_模板.xlsx  重复报警记录_模板.xlsx
frontend/src/: App.vue  main.js
frontend/src/api/: data.js  request.js
scripts/: remove_green_screen.py
(+20 files in other folders)
